--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 body {
-    background-color: #282c34; /* Dark background */
+    background-color: #000000; /* Dark background */
     color: #ffffff; /* Default text color */
     font-family: monospace; /* Monospace font for terminal effect */
     padding: 20px; /* Padding for body */
@@ -10,13 +10,13 @@ body {
 
 /* Container Styles */
 #container {
-    max-width: 1300px; /* Maximum width of the container */
+    max-width: 1400px; /* Maximum width of the container */
     margin: 0 auto; /* Center the container */
     padding: 20px; /* Padding inside the container */
     border: 1px solid #444; /* Border for the container */
     border-radius: 5px; /* Rounded corners for the container */
-    background-color: #222; /* Background color for the container */
-    height: 600px; /* Fixed height for the container */
+    background-color: #012; /* Background color for the container */
+    height: 650px; /* Fixed height for the container */
     overflow-y: auto; /* Allow vertical scrolling */
     font-size: 14px; /* Font size for the container text */
 }
